<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".UI.SecondActivity.clickRestaurant">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UI.FirstActivity.MainActivity">


        <ImageView
            android:id="@+id/restaurantImagePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/restaurantNamePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="casual"
            android:paddingTop="16dp"
            android:text="@string/name"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/restaurantDescriptionPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="casual"
            android:text="@string/restaurantdescription"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/restCoords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="aa"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBox_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourite" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inspectionsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>
