<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/restaurantPic"
            android:layout_width="62dp"
            android:layout_height="50dp"
            android:layout_marginStart="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/food" />

        <TextView
            android:id="@+id/restaurantName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="casual"
            android:text="@string/restaurant_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/restaurantPic"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/restaurantDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurantName"
            android:layout_marginStart="8dp"
            android:layout_toStartOf="@+id/restaurantImage"
            android:fontFamily="casual"
            android:text="@string/description"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tot_viols"
            app:layout_constraintTop_toTopOf="@+id/tot_viols"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/restaurantImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/restaurantName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.636" />

        <TextView
            android:id="@+id/restaurantDescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurantDescription2"
            android:layout_marginTop="4dp"
            android:fontFamily="casual"
            android:text="kkkkkk"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toEndOf="@+id/last_inspec"
            app:layout_constraintTop_toBottomOf="@+id/restaurantDescription" />

        <TextView
            android:id="@+id/tot_viols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurantDescription2"
            android:layout_toEndOf="@+id/restaurantPic"
            android:text="@string/tot_viols"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurantPic" />

        <TextView
            android:id="@+id/last_inspec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tot_viols"
            android:layout_toEndOf="@+id/restaurantPic"
            android:text="@string/last_inspection"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tot_viols"
            app:layout_constraintTop_toBottomOf="@+id/tot_viols"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>